--- a/Coinify/package.json
+++ b/Coinify/package.json
@@ -23,10 +23,12 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "axios": "^1.6.2",
     "emailjs": "^4.0.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-toastify": "^9.1.3",
     "reactdom": "^2.0.0",
     "styled-components": "^6.1.1"
   },
