--- a/Coinify/package.json
+++ b/Coinify/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.2",
     "emailjs": "^4.0.3",
     "jwt-decode": "^4.0.0",
+    "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.2.0",
